homeassistant/CiliumNetworkPolicy-homeassistant.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
